--- a/404 Page with Canvas/404.html
+++ b/404 Page with Canvas/404.html
@@ -14,5 +14,6 @@
     <!-- Drawing Board -->
     <canvas id="drawingBoard" width="400" height="300"></canvas>
     <button id="clearBtn">Clear</button>
+    <script src="script.js"></script>
 </body>
 </html>
